--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -133,9 +133,10 @@ mixin top-nav()
 									li 
 										a(href="#") Беседки
 				.col.text-end
-					+b.logo(href="/").d-lg-none
-						+icon('logo-top')
-					+e.tel(href="tel:+74952563067") +7 495 256 30 67
+					+e.center-block
+						+b.logo(href="/").d-lg-none.mt
+							+icon('logo-top')
+						+e.tel(href="tel:+74952563067").mt +7 495 256 30 67
 				.col-auto
 					+soc().--header
 						+e.A.item--whatsapp(href="#" target="_blank")
