add index 2 page

--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -40,8 +40,8 @@
 				// &:hover {
 				// 	background-color: lighten($primary, 10%);
 				// }
-				background-color: $light;
-				color: $success;
+				background-color: #FFC23B;
+				color: #323C49;
 				&:hover {
 					background-color: lighten($light, 10%);
 				}
