--- a/sourse/pug/blocks/modal/_modal.pug
+++ b/sourse/pug/blocks/modal/_modal.pug
@@ -64,7 +64,7 @@ mixin modal()
 							.text-center
 								.h4 Обратный звонок
 								p Оставьте свой номер телефона и&nbsp;мы&nbsp;вам перезвоним в&nbsp;течение 15&nbsp;минут
-							+input("Ваше Имя")(required)
+							//- +input("Ваше Имя")(required)
 							+input("Ваш телефон", 'tel')(required)
 							+e.BUTTON.btn.btn.btn-primary(type="submit") Запросить обратный звонок
 							+e.agreement Отправляя заявку, вы&nbsp;даете свое согласие на&nbsp;обработку #[a(href="#modal-policy").link-modal-js персональных данных] 
