--- a/sourse/pug/blocks/sPortfolio/_sPortfolio.pug
+++ b/sourse/pug/blocks/sPortfolio/_sPortfolio.pug
@@ -17,3 +17,23 @@ mixin sPortfolio(data)
 						button.btn.btn-primary Показать еще
 						a.btn.btn-outline-secondary(href="#") Смотреть всё портфолио
 	// end sPortfolio
+
+mixin sPortfolio2(data)
+	// start sPortfolio
+	+b.SECTION.sPortfolio.section#sPortfolio&attributes(attributes)
+		.container
+			+b.section-title.text-center
+				h4 Портфолио
+				h2 Примеры навесов отремонтированных нами
+			.row
+				.col-12
+					+sSpecifications4('', 'Навес из поликарбоната', 'Сотовый поликарбонат применим при температуре от &minus;40 до&nbsp;+120&nbsp;С. Материал огнестойкий, способный не&nbsp;поддерживать горение. Обладает теплоизоляционными свойствами за&nbsp;счет ячеек, наполненных воздухом-худшим проводником тепла. Бюджетный и&nbsp;долговечный вариант.')
+				.col-12
+					+sSpecifications4('', 'Навес из поликарбоната', 'Сотовый поликарбонат применим при температуре от &minus;40 до&nbsp;+120&nbsp;С. Материал огнестойкий, способный не&nbsp;поддерживать горение. Обладает теплоизоляционными свойствами за&nbsp;счет ячеек, наполненных воздухом-худшим проводником тепла. Бюджетный и&nbsp;долговечный вариант.')
+				.col-12
+					+sSpecifications4('', 'Навес из поликарбоната', 'Сотовый поликарбонат применим при температуре от &minus;40 до&nbsp;+120&nbsp;С. Материал огнестойкий, способный не&nbsp;поддерживать горение. Обладает теплоизоляционными свойствами за&nbsp;счет ячеек, наполненных воздухом-худшим проводником тепла. Бюджетный и&nbsp;долговечный вариант.')
+				.col
+					+e.btn-wrap
+						button.btn.btn-primary Показать еще
+						a.btn.btn-outline-secondary(href="#") Смотреть всё портфолио
+	// end sPortfolio
