--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -131,6 +131,10 @@
 	font-size:math.div(10,10)*1rem;
 	width: math.div(8,10)*1em;
 }
+.icon-roulette {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
 .icon-sStages-arrow {
 	font-size:math.div(57,10)*1rem;
 	width: math.div(258,57)*1em;
@@ -150,6 +154,10 @@
 .icon-vk {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
+}
+.icon-wa {
+	font-size:math.div(20,10)*1rem;
+	width: math.div(20,20)*1em;
 }
 .icon-whatsapp {
 	font-size:math.div(12.8,10)*1rem;
