--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -28,7 +28,7 @@ mixin headerBlock()
 							.col-6
 								+input(`Длина`, `text`)
 							.col-12
-								+input(`Ваш номер телефона +7 ___ ___ - __ - __`, `tel`)
+								+input(`+7 ___ ___ - __ - __`, `tel`)
 							.col-12
 								+e.btn.link-modal-js(href="#modal-call" data-title= "Получить расчет" data-text= "Оставьте свой номер телефона, мы&nbsp;вам перезвоним и&nbsp;выполним расчет." data-btn= "Получить расчет" data-pic= "2") Получить расчет
 						ul
@@ -45,16 +45,16 @@ mixin headerBlock()
 						+e.item.blurred-block
 							+e.icon-wrap
 								+icon('headerBlock-1')
-							p Выдерживают нагрузку 300&nbsp;кг/м2&nbsp;&mdash; это почти вдвое прочнее рекомендуемых нормативов в&nbsp;Москве и&nbsp;МО (180&nbsp;кг/м2)
+							p Выдерживают нагрузку в&nbsp;соответствии с&nbsp;&laquo;СП&nbsp;20.13330.2016. Свод правил. Нагрузки и&nbsp;воздействия&raquo; и&nbsp;&laquo;СП&nbsp;131.13330.2020. Свод правил. Строительная климатология&raquo;
 					.col-lg-4
 						+e.item.white-bg
 							+e.icon-wrap
 								+icon('headerBlock-2')
-							p Официальный договор, гарантия 12&nbsp;месяцев, оплата наличными, картой или&nbsp;на&nbsp;счет
+							p Официальный договор<br>Гарантия 12&nbsp;месяцев<br>Оплата наличными&nbsp;/ картой&nbsp;/ на&nbsp;расчетный счет
 					.col-lg-4
 						+e.item.blurred-block
 							+e.icon-wrap
 								+icon('headerBlock-3')
-							p Финальная уборка после работы&nbsp;&mdash; не&nbsp;оставим после себя мусор
+							p Финальная уборка после работы&nbsp;&mdash; оставим после себя чистоту
 				
 	// end headerBlock
