--- a/sourse/pug/blocks/sPortfolio/_sPortfolio.scss
+++ b/sourse/pug/blocks/sPortfolio/_sPortfolio.scss
@@ -13,7 +13,10 @@
 		margin-right: auto;
 	}
 	.row {
-		--bs-gutter-y: #{rem(32)};
+		--bs-gutter-y: #{rem(16)};
+		@include media-breakpoint-up(lg) {
+			--bs-gutter-y: #{rem(32)};
+		}
 	}
 	.sSpecifications {
 		@include mt;
@@ -22,7 +25,10 @@
 		border-radius: rem(20);
 		box-shadow: 0px 10px 13px rgba(0, 0, 0, 0.09);
 		&__container {
-			--bs-gutter-x: #{rem(13)};
+			--bs-gutter-x: #{rem(24)};
+			@include media-breakpoint-up(md) {
+				--bs-gutter-x: #{rem(48)};
+			}
 		}
 		&:hover {
 			box-shadow: none;
@@ -52,14 +58,16 @@
 		a,
 		button {
 			 
-				margin-bottom: rem(20);
-				width: 100%;
-				max-width: rem(213);
-				font-size: rem(12);
-				padding: rem(12);
-				@include media-breakpoint-up(lg) {
-					margin-bottom: rem(48);
-				} 
+			width: 100%;
+			max-width: rem(213);
+			font-size: rem(12);
+			padding: rem(12);
+		}
+		button {
+			margin-bottom: rem(20);
+			@include media-breakpoint-up(lg) {
+				margin-bottom: rem(48);
+			} 
 		}
 		a {
 			width: 100%;
