--- a/sourse/pug/blocks/sSpecifications/_sSpecifications.scss
+++ b/sourse/pug/blocks/sSpecifications/_sSpecifications.scss
@@ -17,9 +17,10 @@
 		width: 100%;
 	}
 	&__slider-wrap {
+		position: relative;
 		display: flex;
 		flex-direction: column;
-		margin-bottom: rem(20);
+		// margin-bottom: rem(20);
 		height: calc(100% - #{rem(20)});
 		@include media-breakpoint-up(lg) {
 			margin-bottom: rem(0);
@@ -101,6 +102,67 @@
 	.btn {
 		width: 100%;
 		margin-top: rem(16);
+	}
+	.sPortfolio &__wrap {
+		@include media-breakpoint-up(md) {
+			text-align: center;
+		}
+		h4 {
+			margin-bottom: rem(12);
+			color: #323C49;
+		}
+		p {
+			font-size: rem(12) !important;
+			max-width: rem(1100);
+			margin-left: auto;
+			margin-right: auto;
+			margin-bottom: rem(18);
+			color: #323C49 !important;
+			@include media-breakpoint-up(md) {
+				font-size: rem(14) !important;
+			}
+		}
+		h5 {
+			margin-bottom: rem(12);
+			font-size: rem(14);
+			color: #323C49;
+			@include media-breakpoint-up(md) {
+				font-size: rem(18);
+			}
+		}
+	}
+	&__price {
+		font-size: rem(12);
+		line-height: 1.4em;
+		color: #323C49;
+		@include media-breakpoint-up(md) {
+			font-size: rem(14);
+		}
+	}
+	&__status {
+		position: absolute;
+		top: 0;
+		left: 0;
+		border-radius: rem(8) 0 rem(8) 0;
+		background-color: #fff;
+		color: #323C49;
+		font-size: rem(12);
+		font-weight: 700;
+		padding: rem(13) rem(5);
+		line-height: 1.5em;
+		z-index: 2;
+		width: 100%;
+		max-width: rem(120);
+		text-align: center;
+		&--bg {
+			background-color: #323C49;
+			color: #fff;
+		}
+		@include media-breakpoint-up(md) {
+			font-size: rem(16);
+			padding: rem(18) rem(13);
+			max-width: rem(160);
+		}
 	}
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
