--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -170,7 +170,91 @@
 			display: none;
 		}
 	}
-
+	&__link {
+		padding: 0 rem(13);
+		font-size: rem(14);
+		font-weight: 700;
+		margin-bottom: rem(6);
+		display: flex;
+		align-items: center;
+		@include media-breakpoint-up(lg) {
+			display: none;
+		}
+		&:not(:hover) {
+			color: #323C49;
+		}
+		.icon {
+			flex: 0 0 auto;
+			font-size: rem(20);
+			color: $success;
+			margin-left: rem(4);
+		}
+	}
+	&__email {
+		display: inline-block;
+		padding: 0 rem(13);
+		font-size: rem(12);
+		font-weight: 500;
+		margin-top: rem(6);
+		margin-bottom: rem(12);
+		@include media-breakpoint-up(lg) {
+			display: none;
+		}
+		&:not(:hover) {
+			color: #73767B;
+		}
+	}
+	&__soc-wrap {
+		@include media-breakpoint-up(lg) {
+			display: none;
+		}
+		.soc {
+			--bs-gutter-x: 6px;
+			padding: 0 rem(13);
+			padding-bottom: rem(24);
+			border-bottom: 1px solid #E7ECF2;
+			margin-bottom: rem(12);
+			&__item {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				width: rem(32);
+				height: rem(32);
+				border-radius: 50%;
+				background-color: $light;
+				&:hover {
+					box-shadow: 0px 2px 1px 1px #cbcbcb78;
+				}
+			}
+		}
+	}
+	&__footer-btn-wrap {
+		padding: 0 rem(13);
+		@include media-breakpoint-up(lg) {
+			display: none;
+		}
+	}
+	&__footer-btn {
+		display: flex;
+		align-items: center;
+		font-size: rem(12);
+		font-weight: 500;
+		color: #323C49;
+		max-width: rem(136);
+		margin-left: auto;
+		margin-right: auto;
+	}
+	&__icon-wrap {
+		padding: rem(8);
+		border-radius: 8px;
+		background-color: $light;
+		color: #323C49;
+		margin-right: rem(12);
+		.icon {
+			flex: 0 0 auto;
+			font-size: rem(24);
+		}
+	}
 	@include media-breakpoint-up(md) {
 	}
 
@@ -221,6 +305,7 @@
 	}
 }
 .services-dropdown {
+	position: static;
 	&__btn {
 		@include mt;
 		display: flex;
@@ -318,31 +403,47 @@
 		}
 	}
 	&__content {
-		width: rem(592);
+		width: 100%;
 		background-color: $white;
-		border: 1px solid $info;
+		// border: 1px solid $info;
 		box-sizing: border-box;
 		box-shadow: 0px 10px 13px rgba(0, 0, 0, 0.09);
-		border-radius: 16px;
+		// border-radius: 16px;
 		padding: rem(27) rem(33);
 		// top: 140%;
 		h6 {
-			margin-bottom: rem(20);
+			display: flex;
+			align-items: center;
+			margin-bottom: rem(24);
+			img {
+				flex: 0 0 auto;
+				width: 100%;
+				max-width: rem(24);
+				margin-right: rem(12);
+			}
 		}
 		ul {
 			list-style: none;
 			margin-bottom: 0;
 			li {
-				font-size: rem(12);
+				font-size: rem(14);
+				font-weight: 500;
 				line-height: 115%;
-				margin-bottom: rem(10);
+				margin-bottom: rem(12);
 
 				a {
 					&:not(:hover) {
-						color: #000000;
+						color: #323C49;
 					}
 				}
 			}
+		}
+	}
+	&__large-list {
+		columns: 2;
+		li {
+			display: inline-block;
+			width: 100%;
 		}
 	}
 }
