--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -672,14 +672,14 @@ h4 {
 }
 
 .dropdown {
-	position: relative;
+	// position: relative;
 	// &__btn {
 	// }
 	&__content {
 		display: none;
 		position: absolute;
 		left: 0;
-		top: 130%;
+		top: calc(100% + rem(63));
 		z-index: 998;
 	}
 	&__item {
