--- a/sourse/pug/blocks/sSpecifications/_sSpecifications.scss
+++ b/sourse/pug/blocks/sSpecifications/_sSpecifications.scss
@@ -15,6 +15,7 @@
 		margin-bottom: rem(8);
 		flex-grow: 1;
 		width: 100%;
+		border-radius: rem(12);
 	}
 	&__slider-wrap {
 		position: relative;
