add index 2 page v3

--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -5,7 +5,9 @@
 			color: #000 !important;
 		}
 	}
-
+	.services-dropdown__content {
+		top: 100%;
+	}
 }
 .top-nav {
 	// background: svg-load('../svg/check.svg',  stroke=$primary);
