--- a/sourse/pug/pages/index-2.pug
+++ b/sourse/pug/pages/index-2.pug
@@ -30,6 +30,12 @@ block pagecontent
 		+top-nav()
 		+topLine()
 	+headerBlock()
+	.container
+		.row
+			.col-auto
+				.btn.btn-primary.link-modal-js(href='#modal-callback' data-desktop-pic= "img/@2x/modal-3.png" data-mobile-pic='img/avatar-1.png') Обратный звонок
+			.col-auto
+				.btn.btn-primary.link-modal-js(href='#modal-callback' data-desktop-pic= "img/@2x/modal-4.png" data-mobile-pic='img/avatar-2.png') Обратный звонок 2
 	.section-wrapper
 		+sPortfolio2()
 	//- .section-wrapper.section-wrapper--footer
