--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -23,6 +23,10 @@
 	font-size:math.div(24,10)*1rem;
 	width: math.div(22,24)*1em;
 }
+.icon-callBack {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
 .icon-categories-1 {
 	font-size:math.div(32,10)*1rem;
 	width: math.div(33,32)*1em;
