--- a/sourse/pug/blocks/top-nav/_navMenu.scss
+++ b/sourse/pug/blocks/top-nav/_navMenu.scss
@@ -31,15 +31,18 @@
 		font-weight: 600;
 		font-size: rem(12);
 		line-height: 100%;
-		@include media-breakpoint-between(sm, lg) {
-			font-size: rem(14);
+		// @include media-breakpoint-between(sm, lg) {
+		// 	font-size: rem(14);
+		// }
+		@include media-breakpoint-up(lg) {
+			font-size: rem(13);
 		}
-		@include media-breakpoint-only(lg) {
-			font-size: rem(11);
-		}
+		// @include media-breakpoint-only(lg) {
+		// 	font-size: rem(11);
+		// }
 		@include media-breakpoint-down(lg) {
 			font-weight: 400;
-			font-size: rem(12);
+			// font-size: rem(12);
 		}
 		&:not(:hover) {
 			color: $secondary;
