--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -47,10 +47,10 @@ block pagecontent
 		+sCertificates()
 		+sCatalogProd()
 	+sContact()
+	+sContact3()
 	.section-wrapper.section-wrapper--footer
 		+footer2()
 			+sContact2()
-
 	br
 	br
 	.section-wrapper.section-wrapper--footer
