--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -706,14 +706,18 @@ h4 {
 	}
 }
 .s404{
+	margin-top: calc(#{rem(60)} + #{rem(70)});
 	flex-grow: 1;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	text-align: center;
+	@include media-breakpoint-up(md) {
+		margin-top: calc(#{rem(60)} + #{rem(90)});
+	}
 	@include media-breakpoint-up(lg) {
-
+		margin-top: 0;
 		min-height: 700px;
 	}
 	min-height: 440px;
