--- a/sourse/pug/blocks/top-nav/_navMenu.scss
+++ b/sourse/pug/blocks/top-nav/_navMenu.scss
@@ -34,9 +34,9 @@
 		// @include media-breakpoint-between(sm, lg) {
 		// 	font-size: rem(14);
 		// }
-		@include media-breakpoint-up(lg) {
-			font-size: rem(13);
-		}
+		// @include media-breakpoint-up(lg) {
+		// 	font-size: rem(12);
+		// }
 		// @include media-breakpoint-only(lg) {
 		// 	font-size: rem(11);
 		// }
