--- a/sourse/pug/blocks/modal/_modal.pug
+++ b/sourse/pug/blocks/modal/_modal.pug
@@ -12,7 +12,8 @@ mixin modal()
 				+input("Ваше Имя")(required)
 				+input("+7 ___ ___ __ __", 'tel')(required)
 				+e.BUTTON.btn.btn(type="submit")
-				+e.agreement Отправляя заявку, вы&nbsp;даете свое согласие на&nbsp;обработку #[a(href="#modal-policy").link-modal-js персональных данных] 
+				+agreement()(checked)
+				//- +e.agreement Отправляя заявку, вы&nbsp;даете свое согласие на&nbsp;обработку #[a(href="#modal-policy").link-modal-js персональных данных] 
 			+e.img-wrap.bg-wrap
 				+pic('modal-bg.jpg', 'bg', 0).picture-bg
 				
@@ -67,7 +68,8 @@ mixin modal()
 							//- +input("Ваше Имя")(required)
 							+input("Ваш телефон", 'tel')(required)
 							+e.BUTTON.btn.btn.btn-primary(type="submit") Запросить обратный звонок
-							+e.agreement Отправляя заявку, вы&nbsp;даете свое согласие на&nbsp;обработку #[a(href="#modal-policy").link-modal-js персональных данных] 
+							+agreement()(checked)
+							//- +e.agreement Отправляя заявку, вы&nbsp;даете свое согласие на&nbsp;обработку #[a(href="#modal-policy").link-modal-js персональных данных] 
 					.col-lg-6.d-none.d-lg-block
 						+e.img-wrap
 							+pic('modal-bg-2.jpg', 'bg', 0)
