--- a/sourse/pug/blocks/modal/_modal.scss
+++ b/sourse/pug/blocks/modal/_modal.scss
@@ -187,10 +187,10 @@
 		&__agreement {
 			font-size: 10px;
 			line-height: 115%;
-			text-align: center;
+			// text-align: center;
 			color: $secondary;
 			margin-top: rem(14);
-			max-width: 24em;
+			// max-width: 24em;
 			margin-left: auto;
 			margin-right: auto;
 			@media (min-width: 450px) {
