--- a/sourse/pug/blocks/form-wrap/form-wrap.scss
+++ b/sourse/pug/blocks/form-wrap/form-wrap.scss
@@ -1,135 +1,166 @@
-.form-wrap{
- 	&__input-wrap{
-			// @extend .form-group;
-				position: relative;
-		}
-		&__input{
-			// @extend .form-control;
+.form-wrap {
+	&__input-wrap {
+		// @extend .form-group;
+		position: relative;
+	}
+	&__input {
+		// @extend .form-control;
 		//  outline: 0 !important;
-		padding-top: calc(#{$input-padding-y} + .5em);
-		padding-bottom: calc(#{$input-padding-y} - .5em);
-		&::placeholder{
+		padding-top: calc(#{$input-padding-y} + 0.5em);
+		padding-bottom: calc(#{$input-padding-y} - 0.5em);
+		&::placeholder {
 			color: transparent !important;
 			opacity: 0 !important;
 		}
-	// 	&:not(textarea)::placeholder {
-	// 		color: rgba(#05141F, .5);
-	// 		opacity: 0 !important	;
-	// }
- 	}
- 	&__btn{
- 		cursor: pointer;
- 	}
- 	label{
- 		// width: 100%;
- 		display: block;
- 	}
+		// 	&:not(textarea)::placeholder {
+		// 		color: rgba(#05141F, .5);
+		// 		opacity: 0 !important	;
+		// }
+	}
+	&__btn {
+		cursor: pointer;
+	}
+	label {
+		// width: 100%;
+		display: block;
+	}
 
-
-	 &__input-title{
+	&__input-title {
 		position: absolute;
 		left: 0;
 		padding-left: $input-padding-x;
 		top: $input-padding-y;
 		font-size: $input-font-size;
 		color: $input-placeholder-color;
-		transform-origin: left ;
+		transform-origin: left;
 		pointer-events: none;
-		@include mt(.2s);
+		@include mt(0.2s);
 		max-width: 100%;
 		white-space: nowrap;
 		text-overflow: ellipsis;
-	 }
+	}
 	//  textarea  + &__input-title{
 	// 	 display: none;
 	//  }
-	 &__input{
-		 
-		 &:-webkit-autofill ,
-		 &:focus, 
-		 &:not(:placeholder-shown){
-			 &:not(textarea) {
+	&__input {
+		&:-webkit-autofill,
+		&:focus,
+		&:not(:placeholder-shown) {
+			&:not(textarea) {
 				//  box-shadow:  0px 3px 0px  $primary;
-			 }
-		 }
-		 &:-webkit-autofill ,
-		 &:focus, 
-		 &:not(:placeholder-shown), 
-		 &.form-select  {
-			 & ~ .form-wrap__input-title{
-				 transform: translateY(calc( #{rem(-12)})); 
-			 }
-		 }
-	 }
+			}
+		}
+		&:-webkit-autofill,
+		&:focus,
+		&:not(:placeholder-shown),
+		&.form-select {
+			& ~ .form-wrap__input-title {
+				transform: translateY(calc(#{rem(-12)}));
+			}
+		}
+	}
+	&__agreement {
+		.custom-input {
+			display: flex;
+			align-items: center;
+			margin-bottom: 0;
+			padding-left: 0;
+			&__input {
+				flex: 0 0 auto;
+				margin-left: 0;
+				float: none;
+				margin-top: 0;
+				margin-right: 12px;
+				width: 24px;
+				height: 24px;
+				border: 1px solid #D3D5D8;
+				border-radius: rem(6);
+				&:checked {
+					background-color: $white;
+				}
+			}
+			&__text {
+			}
+		}
+	}
 }
 
-
-.parsley-error{
+.parsley-error {
 	border-image: none;
-	border: 2px solid  red !important;
+	border: 2px solid red !important;
 	color: red;
 	outline: 0 !important;
-	 
 }
-.parsley-success{
-	border: 2px solid  #00d600 !important;
-
+.parsley-success {
+	border: 2px solid #00d600 !important;
 }
-.parsley-errors-list{
+.parsley-errors-list {
 	color: red;
 }
 
-// 
-@include media-breakpoint-up(xl) {}
-
-@include media-breakpoint-up(lg) {}
-
-@include media-breakpoint-up(md) {}
-
-@include media-breakpoint-up(sm) {}
-
-@include media-breakpoint-up(xs) {}
-
-// 
-@include media-breakpoint-between(md, xl) {}
-
-// 
-@include media-breakpoint-only(xs) {}
-
-@include media-breakpoint-only(sm) {}
-
-@include media-breakpoint-only(md) {}
-
-@include media-breakpoint-only(lg) {}
-
-@include media-breakpoint-only(xl) {}
-
-// 
-@include media-breakpoint-down(xl) {}
-
-@include media-breakpoint-down(lg) {}
-
-@include media-breakpoint-down(md) {}
-
-@include media-breakpoint-down(sm) {}
-
-@include media-breakpoint-down(xs) {}
-
-
-.form-check{
-
+//
+@include media-breakpoint-up(xl) {
 }
-.form-check-input{
 
+@include media-breakpoint-up(lg) {
 }
-.form-check-label{
-	
+
+@include media-breakpoint-up(md) {
+}
+
+@include media-breakpoint-up(sm) {
+}
+
+@include media-breakpoint-up(xs) {
+}
+
+//
+@include media-breakpoint-between(md, xl) {
+}
+
+//
+@include media-breakpoint-only(xs) {
+}
+
+@include media-breakpoint-only(sm) {
+}
+
+@include media-breakpoint-only(md) {
+}
+
+@include media-breakpoint-only(lg) {
+}
+
+@include media-breakpoint-only(xl) {
+}
+
+//
+@include media-breakpoint-down(xl) {
+}
+
+@include media-breakpoint-down(lg) {
+}
+
+@include media-breakpoint-down(md) {
+}
+
+@include media-breakpoint-down(sm) {
+}
+
+@include media-breakpoint-down(xs) {
+}
+
+.form-check {
+}
+.form-check-input {
+}
+.form-check-label {
 }
 
 // .custom-input{
 // 	display: block;
 // 	margin: auto;
-	 
+
 // 	margin-bottom: rem(20);
 // 	cursor: pointer;
 // 	position: relative;
@@ -148,33 +179,31 @@
 // 	}
 
 // 	&__input[type="checkbox"] + &__lab{
-// 		&::after{ 
+// 		&::after{
 // 			content:   url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='13' height='8' viewBox='0 0 448 512'%3E%3Cpath fill='%23fff' d='M413.505 91.951L133.49 371.966l-98.995-98.995c-4.686-4.686-12.284-4.686-16.971 0L6.211 284.284c-4.686 4.686-4.686 12.284 0 16.971l118.794 118.794c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-11.314-11.314c-4.686-4.686-12.284-4.686-16.97 0z' class='st0'/%3E%3C/svg%3E");
 // 			position: absolute;
-// 			@include a-cent; 
+// 			@include a-cent;
 // 			opacity: 0;
 // 		}
 // 	}
 
-// 	&__input[type="radio"] + &__lab{ 
+// 	&__input[type="radio"] + &__lab{
 // 		border-radius: 50%;
-// 		&::after{ 
+// 		&::after{
 // 			border-radius: 50%;
 // 		}
 // 	}
 
 // 	&__input:checked + &__lab{
 // 		background-color: $success;
-		 
+
 // 		&::after{
-	
+
 // 			opacity: 1;
 // 		}
 // 	}
- 
+
 // }
-
-
 
 // select.form-control {
 // 	background-image: url(../img/svg/chevron-up.svg);
@@ -192,8 +221,7 @@
 // 	}
 // }
 
-
-input[type='number'] {
+input[type="number"] {
 	-moz-appearance: textfield;
 }
 
@@ -209,8 +237,6 @@ input::-webkit-inner-spin-button {
 	/* <-- Apparently some margin are still there even though it's hidden */
 }
 
-
-
 // .jq-selectbox{
 // 	max-width: 100%;
 // 	margin: auto;
@@ -218,12 +244,12 @@ input::-webkit-inner-spin-button {
 //  // height: auto;
 // 	&__select{
 // 		// background-color: transparent;
-		 
-// 		box-shadow: none !important; 
+
+// 		box-shadow: none !important;
 // 		background-image: none !important;
 // 		text-shadow: none;
 // 		font-family: $default-font;
-// 		font-size: rem(14); 
+// 		font-size: rem(14);
 // 		text-align: left;
 // 		border: 1px solid #dadada;
 // 		background-color: #fff;
@@ -233,19 +259,19 @@ input::-webkit-inner-spin-button {
 // 		border-radius: rem(6);
 // 		@include mt;
 // 		&:hover{
-		 
+
 // 		}
 // 		&-text{
 // 			// width: 100% !important;
 // 			line-height: 1;
 // 		}
-// 	}	
+// 	}
 // 	&__select:hover &__trigger{
-		 
+
 // 	}
 // 	&__trigger{
 // 		border: none;
-// 		background-color: #dadada; 
+// 		background-color: #dadada;
 // 		height: 100%;
 // 		width: 40px;
 // 		border-radius: rem(6);
@@ -255,24 +281,22 @@ input::-webkit-inner-spin-button {
 // 		background-repeat: no-repeat;
 // 		@include mt;
 // 		&:hover{
-			
 
 // 		}
 // 	}
-// 	&__trigger-arrow { 
+// 	&__trigger-arrow {
 // 		border: none;
-    
+
 // }
 // li{
 // 	font-size: rem(16);
 // 	padding: em(10px) 10px em(10px);
 // 	&:hover {
-     
+
 //     color: #fff;
 // }
 // }
 // }
-
 
 .select2-container--default .select2-selection--single {
 	@extend .form-select;
