--- a/sourse/pug/blocks/sContact/_sContact.scss
+++ b/sourse/pug/blocks/sContact/_sContact.scss
@@ -244,6 +244,10 @@
 		}
 		textarea {
 			min-height: rem(112);
+			@include media-breakpoint-up(lg) {
+				// min-height: 179px;
+				min-height: rem(190);
+			}
 		}
 		.btn {
 			width: 100%;
