--- a/sourse/pug/blocks/sContact/_sContact.pug
+++ b/sourse/pug/blocks/sContact/_sContact.pug
@@ -137,7 +137,8 @@ mixin sContact()
 						+input('Вопрос', 'textarea')
 					.col-lg-4
 						+input('Ваш номер телефона', 'tel')
-						button.btn.btn.btn-primary(type="submit") Получить консультацию 
+						button.btn.btn.btn-primary(type="submit") Получить консультацию
+						+agreement()(checked required)
 	// end sContact
 mixin sContact2()
 	// start sContact
@@ -194,7 +195,8 @@ mixin sContact2()
 						+input('Вопрос', 'textarea')
 					.col-lg-4
 						+input('Ваш номер телефона', 'tel')
-						button.btn.btn.btn-primary(type="submit") Получить консультацию 
+						button.btn.btn.btn-primary(type="submit") Получить консультацию
+						+agreement()(checked required)
 	// end sContact
 
 mixin sContact3()
