--- a/sourse/pug/blocks/sThanks/_sThanks.pug
+++ b/sourse/pug/blocks/sThanks/_sThanks.pug
@@ -40,4 +40,7 @@ mixin sThanks(data)
 						+e.link
 							h6 Почитайте <br> наш Блог
 							+e.btn(href="#") Перейти
+			+e.btn-back.btn.btn-outline-secondary(href="#")
+				+icon('chevron-back')
+				span Вернуться назад
 	// end sThanks
