--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -39,7 +39,7 @@ mixin headerBlock()
 								+icon('positive')
 								span Бесплатный выезд инженера на&nbsp;ваш участок
 						//- +e.agreement Отправляя заявку, вы&nbsp;даете свое согласие на&nbsp;обработку #[a(href="#modal-policy").link-modal-js персональных данных]
-						+agreement()(checked)
+						+agreement()(checked required)
 			+e.cards
 				.row
 					.col-lg-4
