--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -54,7 +54,8 @@ block pagecontent
 	br
 	br
 	.section-wrapper.section-wrapper--footer
-		+footer()
+		+footer3()
+		//- +footer()
 	//- +sForm()
 	+scrollToTop()
 
