--- a/sourse/pug/blocks/footer/_footer.scss
+++ b/sourse/pug/blocks/footer/_footer.scss
@@ -109,74 +109,208 @@
 		p {
 			padding-top: rem(21);
 			font-size: rem(12);
-			line-height: 1.30em;
+			line-height: 1.3em;
 			color: rgba(44, 52, 64, 0.5);
 			margin-bottom: 0;
 		}
 	}
 
-	.sContact__links{
+	.sContact__links {
 		width: 32px !important;
 		height: 32px !important;
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		.icon{
+		.icon {
 			color: var(--brand-color) !important;
 		}
 	}
-	.sContact__links:first-of-type{
+	.sContact__links:first-of-type {
 		padding: 0;
-		.icon{
+		.icon {
 			vertical-align: middle;
 			margin: 0;
 		}
 	}
-	.sContact__links:not(:hover){
+	.sContact__links:not(:hover) {
 		background-color: #fff;
 	}
 	.sContact__content,
-	.sContact__content>*{
+	.sContact__content > * {
 		margin-top: 0;
 	}
-// 
-@include media-breakpoint-up(xl) {}
+	&--3 {
+		padding-top: rem(24);
+		padding-bottom: rem(40);
+		@include media-breakpoint-up(md) {
+			padding-top: rem(40);
+			padding-bottom: rem(40);
+		}
+		@include media-breakpoint-up(lg) {
+			padding-top: rem(40);
+			padding-bottom: rem(40);
+		}
+		.footer {
+			&__head-row {
+				align-items: center;
+				--bs-gutter-y: #{rem(24)};
+				--bs-gutter-x: #{rem(16)};
+				margin-bottom: rem(24);
+				@include media-breakpoint-up(sm) {
+					justify-content: space-between;
+				}
+				@include media-breakpoint-up(lg) {
+					// --bs-gutter-y: #{rem(24)};
+					--bs-gutter-x: #{rem(32)};
+					margin-bottom: rem(40);
+				}
+			}
+			&__main-row {
+				--bs-gutter-y: #{rem(24)};
+				--bs-gutter-x: #{rem(16)};
+				margin-bottom: rem(24);
+				@include media-breakpoint-up(lg) {
+					margin-bottom: rem(40);
+					// --bs-gutter-y: #{rem(24)};
+					--bs-gutter-x: #{rem(32)};
+				}
+			}
+			&__btn {
+				margin-bottom: 0;
+				@include media-breakpoint-up(lg) {
+					margin-bottom: 0;
+				}
+			}
+			&__content {
+				max-width: rem(1008);
 
-@include media-breakpoint-up(lg) {}
+				a {
+					@include media-breakpoint-down(sm) {
+						display: block;
+					}
+				}
+			}
+			&__tel {
+				font-weight: 700;
+				font-size: rem(16);
+				line-height: 150%;
+				&:not(:hover) {
+					color: $secondary;
+				}
+			}
+		}
+		.logo {
+			margin-bottom: 0;
+			@include media-breakpoint-up(lg) {
+				margin-bottom: 0;
+			}
+		}
+		h6 {
+			display: flex;
+			align-items: center;
+			@include media-breakpoint-up(lg) {
+				margin-bottom: rem(24);
+			}
+			@include media-breakpoint-down(md) {
+				font-size: rem(16);
+			}
+			img {
+				max-width: rem(24);
+				width: 100%;
+				height: auto;
+				margin-right: rem(12);
+			}
+			span {
+				display: inline-block;
+			}
+		}
+		.label {
+			margin-bottom: 0;
+			display: inline-flex;
+			width: auto;
+			@include media-breakpoint-up(lg) {
+				margin-bottom: 0;
+			}
+		}
+		.schedule {
+			justify-content: flex-start;
+		}
+		ul {
+			&:last-child {
+				margin-bottom: 0;
+			}
+			&.columns {
+				columns: 2;
+				column-gap: var(--bs-gutter-x);
+			}
+			li {
+				a {
+					display: inline-block;
+					font-size: rem(12);
+					@include media-breakpoint-up(md) {
+						font-size: rem(14);
+						line-height: 140%;
+					}
+				}
+			}
+		}
+		.soc {
+			.soc__item--whatsapp {
+				background-color: $white;
+			}
+		}
+	}
+	//
+	@include media-breakpoint-up(xl) {
+	}
 
-@include media-breakpoint-up(md) {}
+	@include media-breakpoint-up(lg) {
+	}
 
-@include media-breakpoint-up(sm) {}
+	@include media-breakpoint-up(md) {
+	}
 
-@include media-breakpoint-up(xs) {}
+	@include media-breakpoint-up(sm) {
+	}
 
+	@include media-breakpoint-up(xs) {
+	}
 
-// 
-@include media-breakpoint-between(md, xl) {}
+	//
+	@include media-breakpoint-between(md, xl) {
+	}
 
+	//
+	@include media-breakpoint-only(xs) {
+	}
 
-// 
-@include media-breakpoint-only(xs) {}
+	@include media-breakpoint-only(sm) {
+	}
 
-@include media-breakpoint-only(sm) {}
+	@include media-breakpoint-only(md) {
+	}
 
-@include media-breakpoint-only(md) {}
+	@include media-breakpoint-only(lg) {
+	}
 
-@include media-breakpoint-only(lg) {}
+	@include media-breakpoint-only(xl) {
+	}
 
-@include media-breakpoint-only(xl) {}
+	//
+	@include media-breakpoint-down(xl) {
+	}
 
+	@include media-breakpoint-down(lg) {
+	}
 
-// 
-@include media-breakpoint-down(xl) {}
+	@include media-breakpoint-down(md) {
+	}
 
-@include media-breakpoint-down(lg) {}
+	@include media-breakpoint-down(sm) {
+	}
 
-@include media-breakpoint-down(md) {}
-
-@include media-breakpoint-down(sm) {}
-
-@include media-breakpoint-down(xs) {}
+	@include media-breakpoint-down(xs) {
+	}
 }
 
 .ml-lg-auto {
