--- a/sourse/pug/blocks/sProducts/_sProducts.scss
+++ b/sourse/pug/blocks/sProducts/_sProducts.scss
@@ -58,9 +58,9 @@
 			color: $gray-900;
 		}
 	}
-	& > a {
-		flex-grow: 1;
-	}
+	// & > a {
+	// 	flex-grow: 1;
+	// }
 	picture {
 		@include mt;
 		@include block(336, 200);
@@ -128,6 +128,7 @@
 		justify-content: space-between;
 		align-items: center;
 		padding-top: rem(23);
+		margin-top: auto;
 		p {
 			font-size: rem(24);
 			font-weight: 800;
