edit top nav size

--- a/sourse/pug/blocks/top-nav/_navMenu.scss
+++ b/sourse/pug/blocks/top-nav/_navMenu.scss
@@ -29,7 +29,7 @@
 		display: block;
 		padding: rem(16) calc(var(--bs-gutter-x) / 2);
 		font-weight: 600;
-		font-size: rem(12);
+		font-size: .8777777778rem;
 		line-height: 100%;
 		// @include media-breakpoint-between(sm, lg) {
 		// 	font-size: rem(14);
