--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -229,6 +229,9 @@
 		@include media-breakpoint-up(lg) {
 			max-width: rem(385);
 		}
+		@include media-breakpoint-up(xl) {
+			max-width: 100%;
+		}
 
 		p {
 			font-weight: 600;
