--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -29,7 +29,7 @@ mixin top-nav()
 						+e.btn.dropdown__btn
 							+e.toggle-icon
 								span
-							span Услуги
+							span Меню
 						+e.content.dropdown__content
 							.container
 								.row
