--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -328,6 +328,7 @@
 		& > span {
 			display: block;
 			line-height: inherit;
+			font-size: 0.777778rem;
 		}
 		&:hover {
 			background-color: lighten($primary, 10%);
