--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -17,7 +17,7 @@ mixin headerBlock()
 						span Установка 1&ndash;2 дня
 					+e.btn.link-modal-js(href="#modal-call" data-title= "Вызвать замерщика" data-text= "Оставьте свой номер телефона, мы&nbsp;вам перезвоним и&nbsp;договоримся о&nbsp;замере" data-btn= "Отправить" data-pic= "1") Вызвать замерщика
 					p Выезжаем в&nbsp;удобный для вас день и&nbsp;время
-				.col-lg-auto
+				.col-lg-auto.col-xl-4
 					+form-wrap.blurred-block
 						h4 Расчет цены за&nbsp;5&nbsp;минут
 						+e.subtitle Заполните форму&nbsp;&mdash; мы&nbsp;сразу перезвоним
