edit mobile nav

--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -466,10 +466,10 @@
 		text-align: center;
 		.top-nav__tel,
 		.logo{
-			@include a-cent;
-			display: flex;
-			justify-content: center;
-			align-items: center;
+			@include a-cent1;
+			// display: flex;
+			// justify-content: center;
+			// align-items: center;
 			
 		}
 	}
