--- a/sourse/pug/blocks/top-nav/_navMenu.scss
+++ b/sourse/pug/blocks/top-nav/_navMenu.scss
@@ -57,10 +57,11 @@
 	&::before {
 		content: "";
 		position: absolute;
-		top: 0;
+		top: 50%;
+		transform: translateY(-50%);
 		left: calc(-1 * var(--bs-gutter-x) / 2);
 		width: calc(100% + var(--bs-gutter-x));
-		height: 100%;
+		height: 150%;
 
 	}
 	&.on span {
@@ -138,8 +139,9 @@
 				opacity: 0;
 			}
 		}
-		@include mt(0.6s);
-		will-change: transform;
+		// @include mt(0.6s);
+		transition: transform .6s, opacity .3s;
+		// will-change: transform;
 
 		// .toggle-menu-mobile {
 		// 	margin-left: -15%;
