--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -177,7 +177,7 @@ mixin top-nav()
 					+soc().--header
 						+e.A.item--phone-call.link-modal-js.d-sm-grid.d-none(href="#modal-call" data-title= "Обратный звонок" data-text= "Оставьте свой номер телефона, и&nbsp;мы&nbsp;вам перезвоним в&nbsp;течение 15&nbsp;минут." data-btn= "Заказать обратный звонок" data-pic= "2")
 							+icon('phone-call')
-						+e.A.item--phone-call.link-modal-js.d-sm-none(href="tel:+74952563067")
+						+e.A.item--phone-call.d-sm-none(href="tel:+74952563067")
 							+icon('phone-call')
 						+e.A.item--whatsapp(href="#" target="_blank")
 							+icon('whatsapp')
